# Veri-easy

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  df_harness.rs  workflow.toml
hvisor-verified-allocator/: Cargo.toml  Makefile  README.md
hvisor-verified-allocator/benches/: bitalloc_bench.rs
hvisor-verified-allocator/src/: lib.rs  optimized.rs  original.rs  verified_impl.rs  verified_proof.rs
precond-translator/: Cargo.toml
precond-translator/src/: lib.rs  visit.rs
precond-translator/src/ast/: block.rs  expr.rs  mod.rs  op.rs  path.rs  types.rs
precond-translator/src/collect/: function.rs  mod.rs  path.rs  precond.rs
precond-translator/src/generate/: generator.rs  mod.rs  visitors.rs
src/: check.rs  config.rs  generate.rs  log.rs  main.rs  utils.rs
src/collect/: function.rs  mod.rs  path.rs  precond.rs  symbol.rs  types.rs
src/components/: alive2.rs  df.rs  identical.rs  kani.rs  mod.rs  pbt.rs
src/defs/: function.rs  mod.rs  path.rs  types.rs
