[package]
name = "veri-easy"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.12"
anyhow = "1.0"
syn = { version = "2", features = ["full", "visit", "visit-mut"] }
prettyplease = "0.2"
quote = "1.0"
proc-macro2 = "1.0"
colored = "3.0"
precond-translator = { path = "precond-translator" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
clap = { version = "4.5.53", features = ["derive"] }

[workspace]
members = ["precond-translator"]
exclude = ["kani_harness", "pbt_harness", "df_harness"]
